# incipio

./: .gitignore  .travis.yml  Makefile.am  autogen  configure.ac  incipio.c  incipio.yuck  readme.md  version.h
hooks/: git-post-commit
man/: incipio.1.txt
