dnl Replace all this as appropriate

AC_INIT([incipio], [0.0.1], [https://example.com/foo/bar/incipio])
AC_CONFIG_SRCDIR([.])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_AUX_DIR([.])
AC_PROG_CC
AC_LANG([C])
AM_INIT_AUTOMAKE([foreign dist-bzip2 subdir-objects std-options])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
